--- a/kubernetes/apps/default/kubernetes-dashboard/app/kustomization.yaml
+++ b/kubernetes/apps/default/kubernetes-dashboard/app/kustomization.yaml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: default
 resources:
-  - ./rbac.yaml
+  #- ./rbac.yaml
+  - ./cluster-role-binding.yaml
   - ./helmrelease.yaml
-  - ./ingress-route.yaml
+  #- ./ingress-route.yaml
