--- a/ansible/inventory/kube/host_vars/k3s-0.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-0.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:tEfGj58S,iv:K/MHzQ3/8YLr3OvQTy5RKgE2jqgR8MKDD0+gvtepc20=,tag:oV04n33QPuVwHp5+jh57Hw==,type:str]
-ansible_user: ENC[AES256_GCM,data:WmMb5rqo,iv:iM3AQ0hYYZmHOODWB8lzWDia5EWCpim5cuPV9VjbbkI=,tag:nSlJHDWm2qCosyGBRsOpGA==,type:str]
+kind: ENC[AES256_GCM,data:HcmqBc0V,iv:gACMnJTDjTAyCb5tMPwLYS3ZuG1LBFq4xglD9kl8+0A=,tag:vwsHEc6QhRy0eBuJmrcxhg==,type:str]
+ansible_user: ENC[AES256_GCM,data:69A1Kuc8,iv:fS5x6l1s+ikElNwt28QeTJHj8nWkP555jqsQAiaptS0=,tag:JJ0ZdHeR5+PYCwrAfkma+Q==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtbGdQdTJnWVZud21DcVZv
-            ZjJnTnh1ejRZZ3VTMmp3QmRDQktmR2dmSmtZCnVleUFGV3RNcGVFbWRpOUtSOHNZ
-            dGdlUFp3L25qb29kK0lVSm5YWlZrYTQKLS0tIC9UT0VieHZxQXc5ekxwNHlBd045
-            c1ZLY3dyT0NET0IxNy8zOUFtQ0pDREkKFObisDPEIG4BlR+nRskw/z00W6Q7Xm27
-            D4TMBknM/2U5fqV+OuTcc+BNhX9bhyblfdNgofUyWE/5hr4w+AwnAw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZSHEvL3lYdzhpUExzY29y
+            OGdad2NyYndYTnVoUkd0WmJaaHB1eUVlU0V3Cms1TzNzdEV1RFF3MTJTN3RFVWNi
+            MzVvN0dJT0lBbWEza3o4UWc3bHNYb2sKLS0tIDlWSDBJVlIxcUIvQ0RXQksvTGVz
+            eTRNTzhpYmlmdU9JaWhBdTBxUEt0QzAKPvdaz5ZFudKJ6F9QB6PU3JKhm0nEkd5L
+            ynvGPbg67gjtcuwQtOPTT2z+cmZIh+MTCDAfDY5G5WVb0tQCRWRKcA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-04T04:52:51Z"
-    mac: ENC[AES256_GCM,data:cLBRuwuVUi1Z0toivf5N/Qt1kIwvf/HbZRFGsL0Nt0nBOZH+F701VvrM8+Hirb5EXqskyZJYpiE4snLZ1T/ZaqR1BIH1PQEBF4vzCbenbvTm6b8w6y9H7Ap2NQqE0+twezo6telHX7n4Q37i4AfukHDW41pF+a0Cwo5wG9PgSaA=,iv:WrYKh/GCd9HxptjNlGJGx3irXO+iBGyk1q8tIg1/+xg=,tag:U7uN2xNvC4Nz2c61Chzwgw==,type:str]
+    lastmodified: "2023-01-05T17:59:30Z"
+    mac: ENC[AES256_GCM,data:oHqXo95Gjn2syQrVmJMUszKnh25NLrrusLE5QyCi4MJi6ry50NLhUKzzPbaX21KWKLZyfs0+P4qZ4Qj3uJBrgicjyI1VrylhuS2dHNvm8hxsSK8uu7M4gyaoPCvFClidao76DAiMJaoNcYbmGvAjgHpndw6BJl0R6YX81WITKG0=,iv:rfvl/8tHyvSB3MMTuDaG2eFRX4EqqZSrDDEAjdfzSRM=,tag:WtgGRSbsgecFcqNnEc88HA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
