--- a/ansible/inventory/kube/host_vars/k3s-1.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-1.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:XtkBLwCx,iv:uTSWAyW4J/K4bsRQbqrJ5yaaa/LNL+lZvIHfLG2WHGc=,tag:x5D9rZFuld6w+3rom0duhw==,type:str]
-ansible_user: ENC[AES256_GCM,data:D5nWgCFQ,iv:HO+OV9xR61rkmKYZzxhg00Qmkz5bQ4fWGwHMRI288V8=,tag:1FKo+/1AUhYfgl9IUB/AGQ==,type:str]
+kind: ENC[AES256_GCM,data:g+bSBOtb,iv:3HB316niw018PVeOHSER0ev0HM+q73mSbFJ6c0jgfZ4=,tag:bcQtPvinPrVVwHJBSEe/bw==,type:str]
+ansible_user: ENC[AES256_GCM,data:XK7HO250,iv:X2/Qo0vUq7EpVfmIwKDtzL8UpwMwgv8Rgmy29RCFEmw=,tag:ny8JgACPpW13rpPYwNoMdQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWTEcwSWZobm9QZllYcUZL
-            Y0U0WmQ1VlMxaU83TGpNbkNMTDlhbHRKTlJFCjY3c1ZORm11eGI4QndCZW5sbGZU
-            Ynlyd3YrRmc4dFM0RVBsNWg2ZzhQbXcKLS0tIG1WS2NmWU9oZFQ2WDdHaXlnR2li
-            UjJmZVY2MzZJOXMvdkMrYzBjei9VcVkKhJDfFCeeO+5I98kL/trMQXuLx6/hrbvq
-            gb6Ft0ujAbDz3RR1HgB7ZE0t20USRNvtv7Lqql1cyCzJ41nXILhyiw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBaNEVJM1lwY2JCZTZJeFBG
+            Tk5OQzFmNkJvWjhGd2JwTVlNZVRjelp0QXpvCnkwd0p6bE1NVzUyTmcrM2U1ZldJ
+            Q1BWM3BwekU1Nk95Y1E1VFpNVGJFVDAKLS0tIDRzQVRFdThKNDdYQ1BIdGZNc3dE
+            bVZnT01JT1lEMVdQdW5UU1BiekV0L2cKbebbPHuOOJlvii5GF5jnVxChcydd/bpl
+            V/yEphvAN4Lc2eGSzyQE9XhM/BJvf3CzFccEGU/JsrDb1p/mXYG1Ow==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-04T04:52:51Z"
-    mac: ENC[AES256_GCM,data:8FqSei9mqjOBUgyKNT9mM1rtyh7yfVUCJP/wC066Ajb0aG9C69BCzaJe/D7WaIg+OJuSOkQYACS5vEWdVNnhN3Onc2aQlaj00y+l+Xwa9rmLHtacC/iPCFV1FwXqAskoC9P+r1gOqDfD+YuXu9kcvj3JX/B3xk52RyyTXk6AW/o=,iv:qT8vKu7HtRsyx76rlBxcbX6WwQLpyciCH62nNPrGnyA=,tag:yZ80dpRuGx2P2PKo41h4ug==,type:str]
+    lastmodified: "2023-01-05T17:59:30Z"
+    mac: ENC[AES256_GCM,data:ss9ppxspEOuXWQnRDSh3Wb6Z+Fy9AKYZGrwjVfCzgj/9n6y0LNSQCc2tF/LHrpvks48VWOpkRBLWEy8ymq8qVTW6voM4uBoS/G+MOCCIMZyZ+V9eDPzV1e83nCYLp0L8Ummbl5Riwnbhae+sQtI/l8IvGxLIoSdqA+0Nlz0FIYk=,iv:tk3KwzNmkZat0eAQKKDTdjYPp8e7xjBaMqOzXBRKszc=,tag:4VSJwBy4bKD4DGE9c/s8lg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
