--- a/ansible/inventory/kube/host_vars/k3s-2.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-2.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:vzPmHCJT,iv:euYewXWsWxyvAGdhnj5c1khS3cvQwtm/xiFz5FcO+Fs=,tag:WTI2wXKt79RLZQnYvXLr2Q==,type:str]
-ansible_user: ENC[AES256_GCM,data:ykS2urJG,iv:Tz0czKCgg+deHLLc39LvOCvUyK6EL8EmeKztqkrONYs=,tag:PJzW/oeBIg4WOGj/A2Fk+w==,type:str]
+kind: ENC[AES256_GCM,data:EuYVew2J,iv:evx/unxvn/Ds3d/5b/EUCwZc++8ycLEoCCwDY4NEXl4=,tag:AKEH+YWVVxQDMoaKWymssA==,type:str]
+ansible_user: ENC[AES256_GCM,data:uXmR8ZoX,iv:qN6d1+0vJyGRuPqRuVNPS0g9ujhKgWb7XF3ftcCFssc=,tag:nDKSSp4OvpqSkEETcTyz9g==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNZXJLbElXZ0lIUHVRd0tD
-            bVIrT0JDSHpDb3B1WWIyTzhBZ05oSTZsRVRjCkRYdTkvbTZNNHFlTXlTMHlRNk4r
-            djdGNXU0dEVoUGdSNHYrUTNHTDhOYzAKLS0tIDNKeXpzeEZLOEpUUTY0UWRUNS8z
-            T0pHREFtMlFaR20xTGgyZkh5bHRKSFUKTZyCEUYIa1rLZf3vMlCQj1b1caVyn+SK
-            jzKnaJf6FYpSTYx3fW2jQnKSIlyYzp0D1L1zoMGPKN649Hc86FYHqg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3N0JodThSWm5pNGFPejdX
+            aUhkS0s1U1pRY2tUZ2RXNFBXU00wanhLczI4Cmp5UnlVb1ZCaG5WNkJaaWl0eFR0
+            UlA3SndBdExiZGt0UjBLZ2M2Z1kxOFkKLS0tIDhLQW1CRG9ZOUUyWUg4M2k1QjNt
+            NmJONzhuMkZ6Wll3V3JnRzNLUG5FOVkKB/Lxosa9sUZ6nMGYJC0H5x4WSZdwVORq
+            xjrPakXu9FuKPU/67fwbcnPpczXODCgrfmvPgzr+GvusGP6VpEBfWw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-04T04:52:51Z"
-    mac: ENC[AES256_GCM,data:svTndLKMnuBqK2N3oVEhUmG3F0Kq2XAC1IxZCCS9YPmJ/nE4YQ9RotoxLWAmQzmnN2REnhZ8XVN0tSW8X0maRG61JyonGAHsoSEy9rxJ+iv3j4KUhZYmk8UQRMUfanKkyZkPTlYUfZYXfDLfGMz3yTlW42xjsqdAySox/lDnGNU=,iv:OGVrC0c1DJR+YV7pszQ9vqldVvEQ+ymSCg0K7uTk3mk=,tag:/rvoOJ6m4AtS5YXWz95fbQ==,type:str]
+    lastmodified: "2023-01-05T17:59:30Z"
+    mac: ENC[AES256_GCM,data:MPSyM68Bqsep1yPgYCAmGLnzEZuUuYZ9UoF6UMOPgcuVEzFR/jw8FmAo+rG9JJTD4aBETS0uavedMkcsVHT67Q/mGnxi0Fe08Q7Qii9PVwSn0M9IKoD0hGZnS8D2VDxeRI+V5qiXOfn72yPjRQyNquZHFKAXVR9C5PCpEt7CfZQ=,iv:6Bci6syuYWfKPNozGt5sDwj82s0dCS/KtxQ4/qTcGpk=,tag:ZNmOriKV2UttWi/rXhA6sA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
