--- a/ansible/inventory/kube/host_vars/k3s-3.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-3.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:uKamjAU9,iv:k+q6theYAtwyHDaEwKblRemAnkT3Ifbw+C8Kpf3u2zQ=,tag:PUJTO+1+/MJmNe4xOX3Ygg==,type:str]
-ansible_user: ENC[AES256_GCM,data:AMwYm9MN,iv:D3C5O90au07NToSdVNkUWJMLs2GvVdD63TCA64hDFsU=,tag:DgEJ9suvTHiYpfZiqa5hIQ==,type:str]
+kind: ENC[AES256_GCM,data:wUiAZQKI,iv:lH9CLdM2g8WmlXnIouKIG2adCe/ihHe5d2Zhd8dtg38=,tag:bWN9xkTym7iPbgN/tSQysQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:Iu58nbYp,iv:rEDKQqaSsaaMPoZpYLXyMHF5dqK/XsV28tFT0/zifQQ=,tag:v1DzsI9jpQI4yVXgY5xocg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUTDJBS2xETkJnakpvcUwy
-            WmNrd3hKcnJiampKd3Y1dTRENEhrRW5jTG5rCnhmQklJWnRBK2J2cUQ3VGljSXJr
-            MUpEMHkrWEYzbXFabDVkU29vQzVIc00KLS0tIFNtMTk0aWJpYVZPYVBHYUNuZmwz
-            OW1mVGg3UzJCYVhoWHQvUitTcHNIcEUKx/woefxWBiYZ1ryR786sxLQek0dsreIT
-            MlQD2s8pz8eJRjcSzaREhbAollc6NiCzyAUXGyzueu0EMu9inpI7FQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkR2tTTWd3R050OHVXck82
+            Y2FvbExvQTJKRm5hbGhZQm9reC9aZkZlZ0FrClRDbVVCRGRoM0ZCbE8zVCs0T3pY
+            eEU2cldjVG5uZ253TE5OZmNDK3VCaFEKLS0tIDgxbWpDb2pDeHFVYWNEdWlIY1h5
+            U1lJZk5mcHlaTkhadGdpQkFqN0Z4YWsKk0L5NkAuFBAWG0S9/C7EQdauLpQnlCB1
+            3KyKsTvlW8kruMZjt82l7FgyG18CtIC7NN2bQC17ygq2lOUL8p7NXw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-04T04:52:51Z"
-    mac: ENC[AES256_GCM,data:GPfcunrAa9NWTItYtFFjUDKJ3aEv2fFdP/1mzjQzE4qsCxv0CCEOXaI9TmeuQ/s91eQlsDNFEdVDeQMEdKSG1u/XGjnQ1BA0NufkcDZQOooXizHODpzEjcERxVB18CS0ZlHz2RHWRvjoNkRd4cSj+RdUgxRNi6sPBP1nVppqWqY=,iv:BkrI+j4VQ0hsRQU3l/SZZB+/dwz+W0iEir59AWoqqG0=,tag:XCJ/jzIxmwMlXZmPbsvq9Q==,type:str]
+    lastmodified: "2023-01-05T17:59:30Z"
+    mac: ENC[AES256_GCM,data:dYsaQeVstEVbAkE0EFpFbCnBkFjtLd45zQWDKMrrsJsobor6HPwL1G7tPcfig5aiGY4zNkEYC1ltawxx2rzcKY1zhE+V47VxAvXhX10vKuURa5NthxbSpiiyVqtozRoBPJDshaRiFHbXR0mdGKYzph7istvaW13MWjOFwhWYx3A=,iv:kbNw8Q7beEnIssyQOZGz02xwv5vAlkoDsSBme3fI6Ek=,tag:Hj+d9pekGNC6xEfOZ/hfIw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
