--- a/ansible/inventory/kube/host_vars/k3s-4.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-4.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:LFdgW7Zs,iv:Pjacwk8l4pAdFFwZ7jdc8K76d/kTffYx8/Fv+qbTGMg=,tag:v9GzH3DlyOxL9AFK65uHpQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:XpbAXrxt,iv:gm9tx15JOCbJc5f//2ncpgeCxU5UprxqdZvVkLvmk+w=,tag:uao5oboH+tXN06yM+8jAWQ==,type:str]
+kind: ENC[AES256_GCM,data:ANWhxLJS,iv:4w5WarpNqsqZb/1PJjGZhWb8OE+Uz/TePFnX9YR4qxY=,tag:jos5sWvRoKBvJ9RoLCOxMA==,type:str]
+ansible_user: ENC[AES256_GCM,data:DCE/bIKK,iv:EmxY3sLvuqq4Mv8CnnaqKIR8d6DI7Y1L5IeFgdm+QmQ=,tag:HD1KbNFwR4KcddUABEKo+Q==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZaGxPcmltMCs5ZC95RGcx
-            b3Znb0ZPZ2orSzBlMEcrdWhsbVJDZFp5MEVNCnNURisvV0g3eTUzcThvNTdrQ2M4
-            MHFCUmNyWHk4ZWpGL0J5SHVVNlNocDAKLS0tIGdOZDVzdmtWU3VBVW9CbGNPT2JQ
-            L1RGb3VhU1R6dTRvZEtRdUlVMHN0eFUK2zYO/wmI6JbTuh/LoAiI2y0iyZKdZwbV
-            wSBnWjEqRpVy+FzGTgfE/wnEZWaLBNV8/w5RbOTuWvNfo8F32y9o/A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1b0ZNVHpXSm5NMUVLY2gz
+            ZHBZbTJ6K1lqZDdkeUEySVRtRzVnMHYzcVVFCmF5RlJ5bkNyMUlZVytHOXVlL2Yx
+            ejhJL1NZMXN2dnYxRUNsMDMwQjJBU2sKLS0tIEhMY3BVbWxubWl1UUZpcXhtQWRS
+            VUk2OUw3RnE0WThvVUZQNDRJbFZXVTgKoMvGIhLA14Ms7WI4n7Is4dVjSpJwNMoY
+            BPC1wLfC+KDU88rKFVOjxQHSjSWlNYqS+qES/lEJUU7RlRHNL+nGIA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-04T04:52:51Z"
-    mac: ENC[AES256_GCM,data:NuT2k7ti6YmYDpfSXrhg7lQhaUHZmk2d0zRePkuoFCMeph+DiqoC3RViPDaF1eOnPVzWgmhnKN0VBHbIzXAF0oPYQlzzvUvMgsKRgSPlt86lwoDgyMmCNilwSq2bWEab0vPnZqQYELSn1BbbepAysbcWxEqc0PP6KxmimOkxSrU=,iv:hupeP7/Qf5fn3g2yhb9AuuVm/GVtUWgXebERoXMZAfM=,tag:j35O6hts7BDcSxfJaQqmuQ==,type:str]
+    lastmodified: "2023-01-05T17:59:30Z"
+    mac: ENC[AES256_GCM,data:zSjudBCHK5c4/9XqSPi92isU1hL6iSRUeiXFiugZdRYR81gWLwsf9Zp6NvANrUCW3AJc87E/kQpNidZXpLMEiWFBx6JVQLVo/kJWmah1A5gXBz1qDWflOax5pw7ssTGxSBVZB25AA4o1UbTb15LeLB0uwoHHrVVo4fpho82Zdv8=,iv:PpqBYI4vBfF+bsC32u5TdGXPLLo+DcYm3lXNZLERORo=,tag:Fgk0+XkQUAfoyfZ01tekxg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
