--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,11 +4,14 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:4itwbCD8ZxcuO8M=,iv:O4dLHj7eO4IAxVK3tWvfU/9AYiw89pZDjd/voi4GXqo=,tag:fv2sWXdUz/5nl5/tcDiR7w==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:RQtvLYIV9y57pKO0Dgin4GhPmC/u,iv:QCoZ36xYj/tFrxa/rbG9Vcjd7T61hL468gZ1WKzEZi4=,tag:s2c7tnVHceFX0mp444dvag==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:5UHQKL/iFIPzO8OIfMQ271PiHCoDg6xEfzcsiEqvYhdmYYuTaFv9LICLcKAxY37bAYGTT/sFLvVWqsechtsMG19Mc35BvyY=,iv:MQhBYWSZ6/BkG9PBJ1xE95AMg8Nf2Th60hBqeWk5fgQ=,tag:3IGtQPCVmCVhfwis/FLYJg==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:yJSLuldGB5IUmgvlp0zcUXDM5SzJCylQ+MoDFFXwiXuyLlw=,iv:o9N3PQCz/DdtWii8jfZULfOv3sJgUNrN2Jg7YBsK10c=,tag:YLHDofv3fv6Ks85e4ms8tw==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:vSXTT1ihwm7n1qFFzENYH7LiFQ==,iv:U0Mj+Lyc5BOjsKov9E5oiSYkEiPH1hpCh3jSQOFklUs=,tag:V1nmMlGJmxU0iqLQm5TTkA==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:wmn8JJ14KdDMkY8=,iv:1zuvzPsbtIO/XJ7LLTkzo3JfR8rmnbrYEEbhhJZb9l8=,tag:6pypPHE+l2TOGjhF4/gHww==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:oSD1BflXw09CUo2fo56qSIR6Tht0,iv:P97jmdz2MAR8tDcW1YSD3GsR6b57yybBY8mV1920iRo=,tag:UYS6HqhPGt0bL0DK3LZHAQ==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:biHx2jgu0LnOQBriK/n/mxF6eMY0Up+a9ckmxV7tYIhlE0Ll5DOSzdHjA/Xe7Xn95obXjjHmNDenA6j0lnZVUWyHDVBe8wo=,iv:RvEqIVEzPuBXpaibdmQvUawo0Ue553aUTHeXvPyrUbk=,tag:Ltfe34p+BmP8GaEWFFRG3Q==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:zkv8KOHahiRrGCNZeVbE4TVLgUewYhB42lvW8kw8BOtY970=,iv:kes/jKA2S5cEkPJFMCcZAfQkHHnicFv8YrdDXGNft9k=,tag:DwkIIhyyKz8JFfkmQMnnDA==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:97EK+Zoi8o/jxbTFUERFleXUGw==,iv:jl8LyOOweqtFL4qZqEthtbgQqHjZsLSpXF0KMUQalmU=,tag:+hHxpzdJbcExuki8SdaLPg==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:nx2BY84xDn4/qDyacpYEo4+ljZ+P,iv:3ADHJRmDS24zEFhyF+YjiC6K10n348o7j+qMZqKDe5g=,tag:bOXuaD/F1JA89UeJxEBMGg==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:15dFHSo7KY4=,iv:WmCuAliMluS7Z88h8SAmvY/s3iJ+H4ZYuQNWnow8Fpc=,tag:AhgVMK6mistAPXf2chbq6g==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:xCBxbHS6IOQ=,iv:CqoPNQLwE70XKgxMGdQEvPrxIF/n5oQEcIiNk9XbMkI=,tag:G7ZyqIOEsBRM0sE3lDR7Yw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -18,14 +21,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxQUIzNW5BK3M0WEVQaWRk
-            K0QzV29nOE1qS0ZSQ1dSS1V6Tk1OMllubjNFCjR0eGV5YmRTTmxZWmFzcnJMa25x
-            Z2ZwL1JTUWN2UmduV1dtUFY3SEtkak0KLS0tIEptRXJvclVkUERLR0tOd1Iyb1Fv
-            elNHckwyTW9jc0tuTFgrUGg0T2JHdGsKghc/Jwp6YPDEIpEQt1dtTtCnG0TI8M7u
-            os23rtFEAX9j3ZfyhuEyjcurCaZ1k6SxV5fKpT+7k2CE9uMo56G/sA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxS0xUTEU2R3ZIMUZaQmRW
+            Smtld2YzOCtwQUJCSUxXUkRTSzZiNE1pMmpJClpRUmVTUTdZN0ZlM0Z6MzFSdVpr
+            ZGZqZWZScFhkUlNtT1d3Y284YVp3Rk0KLS0tIFZUT3FQSWxrM1J3dXRMU2VtaXZC
+            Nkt0RWxqb2hLT2tJa1JaQTNXUll4WlkKJSidTAIeFsBrEh7iK6U5Q7TpyVA1ZKFG
+            LIr8zu7jielGa2f2qedcQtkc4sfmQb3ex3RAZ95qw+76cKhc9kYXVQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-04T04:52:51Z"
-    mac: ENC[AES256_GCM,data:fRhw0D4R5+ANKN3uDXna8xlks890r6mrqkd6WGrFdu9X9dXhl+P2pf+0btqbgJO2TXPRBEHoCZKWi7BCL1EIgVRZwzqAIMkZZ6zTeI1CYiUc3FA0SLXHPHhRCgAJRQmrbu6i83hen1hSr3Sb5KOT2KSn+FB6u94wvSkx1RfXNTE=,iv:JRyifV3+Ns1WGnYhX0rTQVdiIxh3mnfoH+jXZ8ZZkQU=,tag:sVT94D7nXe9+NzNBODTc+w==,type:str]
+    lastmodified: "2023-01-05T17:59:30Z"
+    mac: ENC[AES256_GCM,data:6zn65trOg5Sg9tBMu5Coz1FS9OU6a7db1Xrlhw8nqIqzYZxRDTWzN+1MwpeFO4JDFbH5orzsKqzSNBzPxu4vXm+vcnCt/avl2Jfgl7x90pvCzU4FA4xQvQ25Hqo5/wnE/9lvorxe6x4pvC1nIZRbVr2rwwXJBEX/jT4dy8gTM7M=,iv:U68ap1Rt1kvBe8Zxva7sixZdK7wuObRtlJF+fZmefQw=,tag:jyRvDYkeXJm2QzuhsQPjPw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
