--- a/tmpl/kubernetes/cluster-secrets.sops.yaml
+++ b/tmpl/kubernetes/cluster-secrets.sops.yaml
@@ -10,3 +10,6 @@ stringData:
   SECRET_GOOGLE_CLIENT_ID: "${BOOTSTRAP_GOOGLE_CLIENT_ID}"
   SECRET_GOOGLE_CLIENT_SECRET: "${BOOTSTRAP_GOOGLE_CLIENT_SECRET}"
   SECRET_GOOGLE_WHITELIST_EMAIL: "${BOOTSTRAP_GOOGLE_WHITELIST_EMAIL}"
+  SECRET_AUTHELIA_EMAIL: "${BOOTSTRAP_AUTHELIA_EMAIL}"
+  SECRET_AUTHELIA_DISPLAY_NAME: "${BOOTSTRAP_AUTHELIA_DISPLAY_NAME}"
+  SECRET_AUTHELIA_PASSWORD: "${BOOTSTRAP_AUTHELIA_PASSWORD}"
