--- a/kubernetes/apps/networking/authelia/app/helm-release.yaml
+++ b/kubernetes/apps/networking/authelia/app/helm-release.yaml
@@ -25,19 +25,10 @@ spec:
     controller:
       annotations:
         configmap.reloader.stakater.com/reload: *app
-        secret.reloader.stakater.com/reload: "*app,authelia-files"
+        # secret.reloader.stakater.com/reload: "*app,authelia-files"
     image:
       repository: ghcr.io/authelia/authelia
       tag: 4.37.5
-    env:
-      AUTHELIA_IDENTITY_PROVIDERS_OIDC_ISSUER_PRIVATE_KEY:
-        valueFrom:
-          secretKeyRef:
-            name: authelia-files
-            key: issuer-private-key
-    envFrom:
-      - secretRef:
-          name: *app
     enableServiceLinks: false
     service:
       main:
@@ -61,8 +52,8 @@ spec:
         ingressClassName: "traefik"
         annotations:
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-          external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_NAME}"
-          traefik.ingress.kubernetes.io/router.middlewares: "traefik-system-cloudflare-only@kubernetescrd"
+          external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
+          #traefik.ingress.kubernetes.io/router.middlewares: "traefik-system-cloudflare-only@kubernetescrd"
           external-dns/is-public: "true"
         hosts:
           - host: "auth.${SECRET_DOMAIN_NAME}"
@@ -82,10 +73,19 @@ spec:
         subPath: configuration.yaml
         mountPath: /config/configuration.yml
         readOnly: false
-      users:
-        enabled: true
-        type: secret
-        name: authelia-files
-        subPath: users.yaml
-        mountPath: /config/users.yaml
-        readOnly: false
+    # persistence:
+    #   config:
+    #     enabled: true
+    #     type: custom
+    #     mountPath: /config
+    #     readOnly: true
+    #     volumeSpec:
+    #       configMap:
+    #         name: authelia-config
+      # users:
+      #   enabled: true
+      #   type: secret
+      #   name: authelia-files
+      #   subPath: users.yaml
+      #   mountPath: /config/users.yaml
+      #   readOnly: false
