--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:wYBdwK34XDF8etm40lffwfVPtokL,iv:f5UAf36GSJcVlLa3QiytJWgUBbCGt3VvHTYVGtdUrwQ=,tag:k08zx0Qn7g+bEqy2nx/dyg==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:cIws6G+5mUztB3Y2ib2OxS5El8fiMOEjXTHd7bIUsoP2Oevbmg==,iv:zD5xFqVslOZ5yfGqEz92yRMB0jsv2fsLcbAGfF49cos=,tag:mICGrXLj0PXmmWBn1p2xiQ==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:uG0nOPxi8Qjokzc=,iv:/7dsYHhtEbdn8mjpaMDsi1qUYzZZLlMWnxKPn7CAhfY=,tag:I2Yn5O/GtheEVqZ//942VQ==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:tkgJj0cQIG1TE8lMsTl2hymxvT3w,iv:D3TvRHEfHbXIl9hus473Z08CxhPtehDNBGKOsvQ/Xqg=,tag:yhZxwtKrZKL9+k375OhC2Q==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:SGdwdfZqfoLEE1OAUHAp1WLNezewk0A8GcYyv0Pl9XfCJMQhzQ==,iv:bsJZji9E6JPbxU3jkuM2cpbdzcL/QwoHZ1sfDP+GyT4=,tag:vLUoMqEO0s/0Y5NHsGGGvg==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:elcrrpB03Vcwz7E=,iv:gFtdAgSNYCILVplULG57GOKQ1uJ1KNV5AIPBsdyXVfE=,tag:6xLTOravI/L3T2TSodpDFQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXbWxtTnFsam1XTlFuTmhV
-            M0NhTmprYkxsTytGMFRMVG1HbDI3RUhrMXp3CkdDVGYxOER4M1FQeER6TEZpRHhk
-            eWJ3QWdjVlFzM1loZmcwMVpmYWo1ZDQKLS0tIHhCaU80UHhONndFQ1o2TVVPYS83
-            eFFaeWc2dXBxUnFpdEFQUzdnYm45Z0kKiVwKqANk9Ml7AYxRizvYWQBOXBasfAkF
-            pbo4dRAWYsOL9atbg0TkYxur7DIlyfXSOL312dVIA6l5cjEwIOS2iA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1MVVlY0pmQ1hNd0FBWTFG
+            ZFczdDdsc0xiYWQzU3BjMWhMNDhKMDROaEdjCncwWWFteHEvVThFTmlISUNtRHll
+            MEdzam4ra3RQbXpZY0IwQVg4cUNWMGsKLS0tIHBhNUdnenFjTVk4UHlRaFl5MzhG
+            MkNjQ3JSeFN2NEF1Ym1lSEhpYmJBLzgK5o000n6EOdCkb1fVPiNxrOqMXtgoiA3A
+            G3SyFIH0Fms/oUWqXm5UcdA745owj4e/AO7Ip5qUTALeNnMIBS+IIQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-04T04:52:51Z"
-    mac: ENC[AES256_GCM,data:+vgq8aATOayNrEVEdhNkkt+D9DRsMdSB2HleeuR11IUE3lQ4x1RQVPQPtym3ZzGxpQrLGrGw59ZRBY/AkAnNL7XIdXsYmY0kjyloZQO5xdq7uJCkErfyNKFyntu8UXe5F2A+vF3cePOth9XUZI22JyKQpplgpYUYK0JeoTRyA5A=,iv:qfZ+o34q2bLw1JpFLQvfi95T80NfyGmFXOD8CHWSOKU=,tag:i1RPYR1ISvhcxiUU6IEsnw==,type:str]
+    lastmodified: "2023-01-05T17:59:30Z"
+    mac: ENC[AES256_GCM,data:bd809eO9kijAl6szTkEhXIGMq/8R9o+pdglTdyBTGvluPzsHwtEUqb307RcSF7cWtB3xx+qiQxOB2ubvejNx9HiHKBBpJwHAqv5eL5ezioPDNUNDCF7SkPuM+XzIJL9SYng3wcj+oorFar5PM5Xh32R3yvvLvTDuf+hHfgszxhc=,iv:2ShceFW47++R/ZnOxfQJyhx4hUzqagPwXbsGbL9Qc1k=,tag:jSmisJAYp3d4V97N/YCQMg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
