--- a/kubernetes/apps/networking/authelia/app/kustomization.yaml
+++ b/kubernetes/apps/networking/authelia/app/kustomization.yaml
@@ -1,15 +1,11 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: security
+namespace: networking
 resources:
   - authelia-secrets.yaml
   - authelia-auth.yaml
-  - authelia-files.sops.yaml
   - helm-release.yaml
-patchesStrategicMerge:
-  - patches/env.yaml
-  - patches/postgres.yaml
 configMapGenerator:
   - name: authelia
     files:
