--- a/kubernetes/apps/networking/authelia/ks.yaml
+++ b/kubernetes/apps/networking/authelia/ks.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: security-authelia
+  name: authelia
   namespace: flux-system
   labels:
     substitution.flux.home.arpa/enabled: "true"
@@ -10,7 +10,7 @@ spec:
   path: ./kubernetes/apps/security/authelia/app
   sourceRef:
     kind: GitRepository
-    name: homelab-kubernetes
+    name: home-kubernetes
   # dependsOn:
   #   - name: dbms-cloudnative-pg
   #   - name: dbms-redis
