--- a/tmpl/kubernetes/cluster-secrets.sops.yaml
+++ b/tmpl/kubernetes/cluster-secrets.sops.yaml
@@ -13,3 +13,4 @@ stringData:
   SECRET_AUTHELIA_EMAIL: "${BOOTSTRAP_AUTHELIA_EMAIL}"
   SECRET_AUTHELIA_DISPLAY_NAME: "${BOOTSTRAP_AUTHELIA_DISPLAY_NAME}"
   SECRET_AUTHELIA_PASSWORD: "${BOOTSTRAP_AUTHELIA_PASSWORD}"
+  SECRET_AUTHELIA_JWT: "${BOOTSTRAP_AUTHELIA_JWT}"
