--- a/kubernetes/apps/networking/authelia/app/helm-release.yaml
+++ b/kubernetes/apps/networking/authelia/app/helm-release.yaml
@@ -23,6 +23,7 @@ spec:
       retries: 5
   values:
     controller:
+      replicas: 1
       annotations:
         configmap.reloader.stakater.com/reload: *app
         # secret.reloader.stakater.com/reload: "*app,authelia-files"
